[gd_scene load_steps=31 format=3 uid="uid://crnhfx6itfvt6"]

[ext_resource type="Texture2D" uid="uid://c54ykkrcj1q48" path="res://Levels/riton/ennemies/sprites/orc_sprite.png" id="1_8gp5c"]
[ext_resource type="Script" path="res://Levels/riton/ennemies/orcs/orc.gd" id="1_c4432"]
[ext_resource type="Shader" path="res://Levels/riton/ennemies/orcs/orc_hit.gdshader" id="2_gwtid"]
[ext_resource type="AudioStream" uid="uid://3au8ueg0ywpp" path="res://Levels/riton/ennemies/orcs/OrcMaleDeath.ogg" id="4_g8jb0"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mx4l2"]
resource_local_to_scene = true
shader = ExtResource("2_gwtid")
shader_parameter/hit = false
shader_parameter/death = false

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0qv35"]
radius = 19.75
height = 54.0

[sub_resource type="Animation" id="Animation_bn6y0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}

[sub_resource type="Animation" id="Animation_31rb5"]
resource_name = "idle_down"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [18]
}

[sub_resource type="Animation" id="Animation_738a2"]
resource_name = "idle_left"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}

[sub_resource type="Animation" id="Animation_xwcfw"]
resource_name = "idle_right"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [27]
}

[sub_resource type="Animation" id="Animation_23eey"]
resource_name = "idle_up"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_avivg"]
resource_name = "run_down"
length = 0.9
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [19, 20, 21, 22, 23, 24, 25, 26, 18]
}

[sub_resource type="Animation" id="Animation_53ha4"]
resource_name = "run_left"
length = 0.9
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14, 15, 16, 17, 9]
}

[sub_resource type="Animation" id="Animation_vpfbq"]
resource_name = "run_right"
length = 0.9
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [28, 29, 30, 31, 32, 33, 34, 34, 27]
}

[sub_resource type="Animation" id="Animation_qwpq2"]
resource_name = "run_up"
length = 0.9
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6, 7, 8, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6wko4"]
_data = {
"RESET": SubResource("Animation_bn6y0"),
"idle_down": SubResource("Animation_31rb5"),
"idle_left": SubResource("Animation_738a2"),
"idle_right": SubResource("Animation_xwcfw"),
"idle_up": SubResource("Animation_23eey"),
"run_down": SubResource("Animation_avivg"),
"run_left": SubResource("Animation_53ha4"),
"run_right": SubResource("Animation_vpfbq"),
"run_up": SubResource("Animation_qwpq2")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pv7qh"]
animation = &"idle_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_sjvjp"]
animation = &"idle_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_l5v11"]
animation = &"idle_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_d8buk"]
animation = &"idle_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_1m4sd"]
blend_point_0/node = SubResource("AnimationNodeAnimation_pv7qh")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_sjvjp")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_l5v11")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_d8buk")
blend_point_3/pos = Vector2(1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_j3nw3"]
animation = &"run_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_sey5y"]
animation = &"run_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_eyjje"]
animation = &"run_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_w3f16"]
animation = &"run_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_yfh16"]
blend_point_0/node = SubResource("AnimationNodeAnimation_j3nw3")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_sey5y")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_eyjje")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_w3f16")
blend_point_3/pos = Vector2(1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_nlfba"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_d8sf5"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ixbw7"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_h2iv0"]
states/End/position = Vector2(698, 93)
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_1m4sd")
states/Idle/position = Vector2(355, 100)
states/Run/node = SubResource("AnimationNodeBlendSpace2D_yfh16")
states/Run/position = Vector2(548, 100)
states/Start/position = Vector2(197, 100)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_nlfba"), "Idle", "Run", SubResource("AnimationNodeStateMachineTransition_d8sf5"), "Run", "Idle", SubResource("AnimationNodeStateMachineTransition_ixbw7")]
graph_offset = Vector2(27, -2)

[node name="Orc" type="CharacterBody2D" groups=["ennemies"]]
scale = Vector2(0.8, 0.8)
collision_layer = 8
collision_mask = 48
script = ExtResource("1_c4432")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_mx4l2")
texture = ExtResource("1_8gp5c")
hframes = 9
vframes = 4
frame = 9

[node name="Hurtbox" type="CollisionShape2D" parent="."]
position = Vector2(-1, -2)
shape = SubResource("CapsuleShape2D_0qv35")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6wko4")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_h2iv0")
anim_player = NodePath("../AnimationPlayer")
parameters/Idle/blend_position = Vector2(-0.0838548, -0.154185)
parameters/Run/blend_position = Vector2(0.00876093, 0.0396476)

[node name="Invulnerability" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="NewTargetTimer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
scale = Vector2(1.25, 1.25)
stream = ExtResource("4_g8jb0")

[connection signal="timeout" from="Invulnerability" to="." method="_on_invulnerability_timeout"]
[connection signal="timeout" from="NewTargetTimer" to="." method="_on_new_target_timer_timeout"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
